# igloo

./: .commitlintrc.json  .ecrc  .editorconfig  .editorconfig-checker.json  .envrc  .gitignore  .justfile  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  .ruff.toml  .stylua.toml  .typos.toml  .yamllint  Justfile  README.md  flake.nix  pyproject.toml  shell.nix
.github/: README.md  description  make-readme.sh  readme-footer.html  readme-header.html  topics
.meta/: description  topics
.pre-commit/: check_github_urls_branch.py  config.yaml
ansible/: inventory.ini
config/: README.md  inputrc  ripgreprc
config/atuin/: config.toml
config/bash/: .bashrc  README.md
config/bat/: config  plain-vscode.conf
config/direnv/: direnvrc.sh
config/editorconfig/: dot-editorconfig
config/git/: config  ignore
config/glazewm/: config.yaml
config/ipython/: ipython_config_default.py
config/mise/: config.toml  (+3 more)
flake/: devshell.nix  modules.nix  overlays.nix  packages.nix  pre-commit.nix  templates.nix
homes/: default.nix  vscode-server.nix
hosts/: default.nix
nix/: default.nix  shell.nix
nix/templates/python-typer/: flake.nix  pyproject.toml
scripts/: README.md  fix-ssh-permissions.sh  git-branch-manager.sh  glibexec.bash  igloo.py  install-mise.sh  install-neovim.bash  install-rust.sh  install-stowsh.sh  ipylab.sh  manixi.bash  pubs-fzf-open.sh  pylab.sh  pyversion.py  rnm.bash
secrets/: config-pet-loic.toml.age  config-ssh-loic.age  key-ssh-bdp@p2chpd.age  key-ssh-onera-ed25519.age  key-ssh-onera-rsa.age  secrets.nix  token-gist-loicreynier.age
(+382 files in other folders)
